AC_INIT(configure.in)

AM_INIT_AUTOMAKE(MyPion, 1.00)

AC_PROG_CXX(CC g++)
AC_ENABLE_STATIC(no)
AC_PROG_LIBTOOL

dnl   no point in suppressing warnings people should
dnl   at least see them, so here we go for g++: -Wall
if test $ac_cv_prog_gxx = yes; then
CXXFLAGS="$CXXFLAGS -O2 -Wall -Werror"
fi

CPPFLAGS="$CPPFLAGS -I`root-config --incdir`"

AC_SUBST(ROOT_LIBS)
ROOT_LIBS=`root-config --libs`





AC_OUTPUT(Makefile)
